[BLC-681] Bootstrap defines vertical-align rule for img, override for get component to fix mispositioned CanvasItems

--- a/admin/src/main/webapp/admin/resources/css/admin.css
+++ b/admin/src/main/webapp/admin/resources/css/admin.css
@@ -148,6 +148,10 @@ select, textarea, input[type="text"], input[type="password"], input[type="dateti
 .imgButtonSelectedDisabled img,
 .imgButtonSelectedOver img {vertical-align: top;}
 
+#gwt-component img {
+    vertical-align: top;
+}
+
 /*============================= Catalog -> Offers =============================*/
 /*===============================================================================*/
 
